Removed unneeded reference from vsix manifest.
Signed-off-by: Brandon Kohn <blkohn@hotmail.com>

--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -188,6 +188,7 @@
     <ProjectReference Include="..\BoostTemplateProfiler\BoostTemplateProfiler.vcxproj">
       <Project>{11770041-221A-493E-9F30-815F16C9E1BB}</Project>
       <Name>BoostTemplateProfiler</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup</IncludeOutputGroupsInVSIX>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
