--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -201,7 +201,8 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\VSSDK\Microsoft.VsSDK.targets" />
   <PropertyGroup>
-    <PreBuildEvent>xcopy /R /Y $(SolutionDir)\BoostTemplateProfiler\$(Configuration)\BoostTemplateProfiler.dll $(SolutionDir)\Meta\bin\$(Configuration)\</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
