Added partial unit test for MultiMap. Added the stack size parameter to the BuildProfiler.cs
Signed-off-by: Brandon Kohn <blkohn@hotmail.com>

--- a/Meta/Meta_UnitTests/Meta_UnitTests.csproj
+++ b/Meta/Meta_UnitTests/Meta_UnitTests.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultiMapTest.cs" />
     <Compile Include="PackageTest.cs" />
     <!---->
     <Compile Include="MenuItemTests\MenuItemCallback.cs" />
