Fixed issue where instantiations were not being properly logged before call graph output.
Beginning to investigate better reporting (time permitting...)

--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -108,6 +108,7 @@
     <Compile Include="BuildProfiler.cs" />
     <Compile Include="CallbackLog.cs" />
     <Compile Include="Compiler.cs" />
+    <Compile Include="GenerateBoostBuildFile.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="IDEBuildLogger.cs">
       <SubType>Code</SubType>
