Fixed vsix issue.

--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -231,6 +231,7 @@
   <ItemGroup>
     <Content Include="License.txt">
       <IncludeInVSIX>true</IncludeInVSIX>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Package.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
