Added header profiler prototype. Finally fixed the issue with odd errors in template profiling.

--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -141,6 +141,7 @@
     <Compile Include="CallbackLog.cs" />
     <Compile Include="Compiler.cs" />
     <Compile Include="Guids.cs" />
+    <Compile Include="HeaderProfiler.cs" />
     <Compile Include="IDEBuildLogger.cs">
       <SubType>Code</SubType>
     </Compile>
